mobile friendly updates

--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
         <button class="button8" onclick="playMusic('track8')">8-Tetrachromacy</button>
         <button class="button9" onclick="playMusic('track9')">9-Searching</button>  
         <button class="button10"onclick="playMusic('track10')">10-The Fourth Colour</button>
-        <button id="button11" onclick="stopMusic()">STOP MUSIC</button>
+        <button id="button11" onclick="stopMusic()">Pause</button>
+        <button id="button12" onclick="startMusic()">Resume</button>
     </div>
 
     <div class="hiddenAudio">
